@@ -7,6 +7,8 @@ bochs (2.4.1-2) UNRELEASED; urgency=low
     - debian/patches/12_use_so_plugins.patch: New file.
   * Rename conf_args to conf_arch_args in debian/rules.
   * Move -e from the shebang to a 'set -e' in debian/launcher.
+  * Update config.guess and config.sub before running configure and remove
+    them on clean to avoid shipping them on the diff.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 13 Sep 2009 19:22:43 +0200
 
